<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_metronome"
        android:layout_width="129dp"
        android:layout_height="74dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="438dp"
        android:onClick="playMetronome"
        android:text="@string/start_metronome"
        app:layout_constraintLeft_toRightOf="@+id/stop_metronome"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/stop_metronome"
        android:layout_width="129dp"
        android:layout_height="74dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="438dp"
        android:onClick="stopMetronome"
        android:text="@string/stop_metronome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:id="@+id/rg_bpm"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:checkedButton="@+id/rb_60_bpm"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="18dp"
        tools:ignore="MissingConstraints,RtlHardcoded">

        <RadioButton
            android:id="@+id/rb_60_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_60_bpm" />

        <RadioButton
            android:id="@+id/rb_80_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_80_bpm" />

        <RadioButton
            android:id="@+id/rb_100_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_100_bpm" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_metronome"
        android:layout_width="196dp"
        android:layout_height="231dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="108dp"
        android:checkedButton="@+id/haptic_metronome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/haptic_metronome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/haptic_metronome" />

        <RadioButton
            android:id="@+id/sound_metronome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sound_metronome" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>