<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/rg_bpm"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:checkedButton="@+id/rb_60_bpm"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="18dp"
        tools:ignore="MissingConstraints,RtlHardcoded">

        <RadioButton
            android:id="@+id/rb_60_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_60_bpm" />

        <RadioButton
            android:id="@+id/rb_80_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_80_bpm" />

        <RadioButton
            android:id="@+id/rb_100_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_100_bpm" />

        </RadioGroup>

    <Button
        android:id="@+id/input_session"
        android:layout_width="164dp"
        android:layout_height="73dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="TO_Tap"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/rhyms_pick"
        android:layout_width="356dp"
        android:layout_height="183dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="92dp"
        android:checkedButton="@+id/rhym_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rhym_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rhythm 1" />

        <RadioButton
            android:id="@+id/rhym_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rhythm 2" />

        <RadioButton
            android:id="@+id/rhym_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rhythm 3" />

        <RadioButton
            android:id="@+id/rhym_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rhythm 4" />

        <RadioButton
            android:id="@+id/rhym_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rhythm 5" />

        <RadioButton
            android:id="@+id/rhym_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rhythm 6" />
    </RadioGroup>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="351dp"
        android:layout_height="71dp"
        android:layout_marginBottom="131dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>